[tool.poetry]
name = "random-file"
version = "0.3.0"
description = "Just a button to open random file from directory where executable is placed."
authors = ["odhako <odhako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
keyboard = "^0.13.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
